--- a/selectors.css
+++ b/selectors.css
@@ -23,7 +23,7 @@ li {
 
 /*Change the background on every paragraph to be yellow*/
 p {
-	color: yellow;
+	background-color: yellow;
 }
 
 /*Make all inputs have a 3px red border*/
@@ -66,8 +66,8 @@ div:nth-of-type(3) p:nth-of-type(2)
 
 /* Make the <em> in the 3rd <div> element white and 20px font(font-size:20px)*/
 div:nth-of-type(3) em {
-	font-size: 20px;
 	color: white;
+	font-size: 20px;	
 }
 
 
@@ -76,7 +76,7 @@ div:nth-of-type(3) em {
 
 /*Make all "checked" checkboxes have a left margin of 50px(margin-left: 50px)*/
 input:checked {
-	margin-left: 50px
+	margin-left: 50px;
 }
 
 /* Make the <label> elements all UPPERCASE without changing the HTML(definitely look this one up*/
@@ -87,7 +87,7 @@ label {
 /*Make the first letter of the element with id 'special' green and 100px font size(font-size: 100)*/
 #special:first-letter{
    color: green;
-   font-size: 100
+   font-size: 100px;
 }
 
 /*Make the <h1> element's color change to blue when hovered over */
