--- a/blog.css
+++ b/blog.css
@@ -1,17 +1,21 @@
 body {
-	margin-left: 15%;
-	margin-right: 15%;
+	margin: 20px auto;
+	width: 700px;
 	border: 20px solid #bdc3c7;
-	padding: 10px 10px 10px 10px;
+	padding: 20px 20px 20px 20px;
+	font-family: Source Sans Pro;
 
 }
 
 h2 {
 	color: #2c3e50;
+	font-size: 2.0rem;
 }
 
 .date {
 	color: #3498db;
+	text-transform: uppercase;
+	letter-spacing: 0.2rem;
 }
 
 .firstParag {
@@ -19,11 +23,14 @@ h2 {
 	padding-left: 8px;
 }
 
-.lastParag {
-	padding-bottom: 15px;
-	border-bottom: 1px solid #ddd;	
+hr {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.fontParag {
-	font-family: 'Source Sans Pro', sans-serif;
+.lastParag {
+	padding-bottom: 15px;
 }
+
