--- a/blog.css
+++ b/blog.css
@@ -30,7 +30,7 @@ hr {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.lastParag {
-	padding-bottom: 15px;
+.post {
+	margin-bottom: 20px;
 }
 
