--- a/Bootstrap4_Code/13_Museum_Of_Candy/Starter/app.css
+++ b/Bootstrap4_Code/13_Museum_Of_Candy/Starter/app.css
@@ -43,4 +43,14 @@ body {
     color: #f498b8;
     font-weight: 100;
     font-size: 1.125rem;
+    line-height: 2;
+}
+
+.content {
+    margin-top: 100px;
+}
+
+.navbar.scrolled {
+    background: rgb(222,192,222);
+    transition: background 500ms;
 }
